@@ -1,3 +1,7 @@
+2011-06-02:
+	* (seebs) intercept system() so the pseudo environment is
+	  properly set for it.
+
 2011-05-31:
 	* (seebs) Don't mask in 0100 to filesystem modes for things which
 	  are not actually directories, because this breaks the special
